--- a/app/src/main/res/layout/activity_sprint_settings.xml
+++ b/app/src/main/res/layout/activity_sprint_settings.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffffff"
-        android:text="@string/settings_header"
+        android:text="@string/pref_settings_header"
         android:textSize="32sp" />
 
     <TextView
@@ -28,7 +28,7 @@
         android:layout_below="@+id/spacer01"
         android:layout_alignParentStart="true"
         android:textColor="#ffffffff"
-        android:text="@string/settings_sets"
+        android:text="@string/pref_settings_sets"
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
         android:paddingTop="12dp"
