--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,5 +5,11 @@
         android:title="@string/pref_title_notification_time"
         android:summary="@string/pref_notification_time_default"
         android:defaultValue="@string/pref_notification_time_default" />
-
+<!--
+    <CheckBoxPreference
+        android:key="@string/pref_notification_time"
+        android:title="@string/pref_title_notification_time"
+        android:summary="@string/pref_notification_time_default"
+        android:defaultValue="true" />
+-->
 </PreferenceScreen>
